[package]
name = "ticketed_lock"
version = "0.3.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
description = """
Ticketed lock system - allows one to separate lock request from the actual waiting.
"""
edition = "2018"
documentation = "https://docs.rs/ticketed_lock/"
repository = "https://github.com/kvark/ticketed_lock/"
keywords = []
license = "Apache-2.0"
exclude = ["doc", ".travis.yml"]

[features]
default = ["log"]

[dependencies]
log = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }

[[example]]
name = "order"

[dev-dependencies]
env_logger = "0.8"
